force-app/main/default/objects/custom_create320__c/custom_create320__c.object-meta.xml
<CustomObject>
    <label>Custom created object320</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects320</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>