force-app/main/default/objects/custom_create320__c/fields/custom_create_320field511__c.field-meta.xml
<CustomField>
    <fullName>custom_create_320field511__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 320field511</label>
    <type>Checkbox</type>
</CustomField>