force-app/main/default/objects/custom_create320__c/fields/custom_create_320field610__c.field-meta.xml
<CustomField>
    <fullName>custom_create_320field610__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 320field610</label>
    <type>Checkbox</type>
</CustomField>